# libklakier

./: Cargo.toml  README.md
src/: basic.rs  lib.rs
src/advanced/: freeze.rs  mod.rs
src/base/: install.rs  mod.rs  structs.rs  uninstall.rs
src/basic/: install.rs  mod.rs  strs.rs  structs.rs  uninstall.rs
src/database/: add.rs  initialise.rs  mod.rs  query.rs  remove.rs  search.rs
