[package]
name = "libdlta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.26.1"
ansi_term = "0.12.1"
tar = "0.4.37"
blake2 = "0.9.2"
zstd_util = "0.1.1"
toml = "0.5.8"
serde_derive = "1.0.130"
serde = "1.0.130"
glob = "0.3.0"