[package]
name = "libdlta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.26.1", default-features = false }
ansi_term = "0.12.1"
tar = { version = "0.4.37", default-features = false }
blake2 = { version = "0.9.2", default-features = false }
zstd_util = "0.1.1"
toml = { version = "0.5.8", default-features = false }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
